# furman

./: README.md  S3.md  SFTP.md  cliff.toml  furman-logo.html  package-lock.json  package.json
.beads/: issues.jsonl  metadata.json
.github/workflows/: release.yml  test-s3-aws.yml  test-s3-garage.yml  test-s3-minio.yml  test-s3-seaweedfs.yml  test-s3.yml
scripts/: import-cyberduck-profiles.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  docker-compose.test.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/cloudfront/: mod.rs  service.rs
src-tauri/src/commands/: archive.rs  cloudfront.rs  directory.rs  file.rs  git.rs  keychain.rs  metadata.rs  mod.rs  oidc.rs  s3.rs  search.rs  sftp.rs  sync.rs  terminal.rs  volumes.rs  watcher.rs
src-tauri/src/models/: mod.rs
src-tauri/src/oidc/: service.rs
src-tauri/src/s3/: client.rs  crypto.rs  helpers.rs  mod.rs  service.rs
src-tauri/src/sftp/: client.rs  helpers.rs  mod.rs  service.rs
src-tauri/tests/: s3_integration.rs
src-tauri/tests/common/: mod.rs
src/lib/components/: BreadcrumbBar.svelte  CloudFrontTab.svelte  ColumnView.svelte  ConfirmDialog.svelte  ConnectionManager.svelte  DualPanel.svelte  Editor.svelte  FileIcon.svelte  FilePanel.svelte  FileRow.svelte  FunctionBar.svelte  ImageTooltip.svelte  InputDialog.svelte  MenuBar.svelte  MenuDropdown.svelte  MfaDialog.svelte  OverwriteDialog.svelte  PreferencesDialog.svelte  ProgressDialog.svelte  PropertiesDialog.svelte  S3AccessPointsTab.svelte  S3BatchEditDialog.svelte  S3ConnectDialog.svelte  S3ConnectionManager.svelte  S3InventoryTab.svelte  S3NotificationsTab.svelte  S3ReplicationTab.svelte  SearchDialog.svelte  SftpConnectDialog.svelte  ShortcutsDialog.svelte  Sidebar.svelte  StatusBar.svelte  SyncDialog.svelte  TerminalPanel.svelte  TransferPanel.svelte  Viewer.svelte  XTerm.svelte
src/lib/data/: cyberduck-s3-providers.json  s3-providers.ts
src/lib/services/: cloudfront.ts  config.ts  drag.ts  keychain.ts  log.ts  s3.ts  sftp.ts  tauri.ts
src/lib/state/: app.svelte.ts  connections.svelte.ts  panels.svelte.ts  platform.svelte.ts  s3bookmarks.svelte.ts  s3profiles.svelte.ts  sftpbookmarks.svelte.ts  sidebar.svelte.ts  status.svelte.ts  terminal.svelte.ts  transfers.svelte.ts  workspaces.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: format.ts  sort.ts
src/routes/: +layout.svelte  +page.svelte
