[package]
name = "furman"
version = "0.1.3"
description = "Furman File Manager for macOS"
authors = ["Bartosz Fenski"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = ["protocol-asset"] }
tauri-plugin-log = "2.8.0"
thiserror = "1.0"
notify = "7"
trash = "5"

portable-pty = "0.8"

nix = { version = "0.29", features = ["fs", "user"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
keyring = { version = "3", features = ["apple-native"] }
tokio = { version = "1", features = ["sync", "fs", "io-util", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
